--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -59,8 +59,8 @@ By the end of the chapter, readers will be able to do the following:
 - Describe and interpret accuracy, precision, recall, and confusion matrices.
 - Evaluate classification accuracy, precision, and recall in R using a test set, a single validation set, or cross-validation.
 - Produce a confusion matrix in R.
-- Choose the number of neighbors in a $K$-nearest neighbors classifier by maximizing estimated cross-validation accuracy.
-- Describe the advantages and disadvantages of the $K$-nearest neighbors classification algorithm.
+- Choose the number of neighbors in a K-nearest neighbors classifier by maximizing estimated cross-validation accuracy.
+- Describe the advantages and disadvantages of the K-nearest neighbors classification algorithm.
 
 ## Evaluating performance
 
@@ -309,7 +309,7 @@ In the remainder of the textbook, we will set the seed once at the beginning of 
 
 ## Evaluating performance with `tidymodels`
 Back to evaluating classifiers now!
-In R, we can use the `tidymodels` package \index{tidymodels} not only to perform $K$-nearest neighbors
+In R, we can use the `tidymodels` package \index{tidymodels} not only to perform K-nearest neighbors
 classification, but also to assess how well our classification worked. 
 Let's work through an example of how to use tools from `tidymodels` to evaluate a classifier
  using the breast cancer data set from the previous chapter.
@@ -425,7 +425,7 @@ cancer_proportions
 
 ### Preprocess the data
 
-As we mentioned in the last chapter, $K$-nearest neighbors is sensitive to the scale of the predictors,
+As we mentioned in the last chapter, K-nearest neighbors is sensitive to the scale of the predictors,
 so we should perform some preprocessing to standardize them. An
 additional consideration we need to take when doing this is that we should
 create the standardization preprocessor using **only the training data**. This ensures that
@@ -446,7 +446,7 @@ cancer_recipe <- recipe(Class ~ Smoothness + Concavity, data = cancer_train) |>
 ### Train the classifier
 
 Now that we have split our original data set into training and test sets, we
-can create our $K$-nearest neighbors classifier with only the training set using
+can create our K-nearest neighbors classifier with only the training set using
 the technique we learned in the previous chapter. For now, we will just choose
 the number $K$ of neighbors to be 3, and use concavity and smoothness as the
 predictors. As before we need to create a model specification, combine
@@ -477,7 +477,7 @@ hidden_print(knn_fit)
 
 ### Predict the labels in the test set
 
-Now that we have a $K$-nearest neighbors classifier object, we can use it to
+Now that we have a K-nearest neighbors classifier object, we can use it to
 predict the class labels for our test set.  We use the `bind_cols` \index{bind\_cols} to add the
 column of predictions to the original test data, creating the
 `cancer_test_predictions` data frame.  The `Class` variable contains the actual
@@ -573,7 +573,7 @@ classification problem: the *majority classifier*. The majority classifier \inde
 *always* guesses the majority class label from the training data, regardless of
 the predictor variables' values.  It helps to give you a sense of
 scale when considering accuracies. If the majority classifier obtains a 90%
-accuracy on a problem, then you might hope for your $K$-nearest neighbors
+accuracy on a problem, then you might hope for your K-nearest neighbors
 classifier to do better than that. If your classifier provides a significant
 improvement upon the majority classifier, this means that at least your method
 is extracting some useful information from your predictor variables.  Be
@@ -599,10 +599,10 @@ is benign. The estimated accuracy of the majority classifier is usually
 fairly close to the majority class proportion in the training data.
 In this case, we would suspect that the majority classifier will have 
 an accuracy of around `r round(cancer_propn_1[1,1], 0)`%.
-The $K$-nearest neighbors classifier we built does quite a bit better than this, 
+The K-nearest neighbors classifier we built does quite a bit better than this, 
 with an accuracy of `r round(100*cancer_acc_1$.estimate, 0)`%. 
 This means that from the perspective of accuracy,
-the $K$-nearest neighbors classifier improved quite a bit on the basic
+the K-nearest neighbors classifier improved quite a bit on the basic
 majority classifier. Hooray! But we still need to be cautious; in 
 this application, it is likely very important not to misdiagnose any malignant tumors to avoid missing
 patients who actually need medical care. The confusion matrix above shows
@@ -617,7 +617,7 @@ for the application.
 The vast majority of predictive models in statistics and machine learning have
 *parameters*. A *parameter*\index{parameter}\index{tuning parameter|see{parameter}}
 is a number you have to pick in advance that determines
-some aspect of how the model behaves. For example, in the $K$-nearest neighbors
+some aspect of how the model behaves. For example, in the K-nearest neighbors
 classification algorithm, $K$ is a parameter that we have to pick
 that determines how many neighbors participate in the class vote. 
 By picking different values of $K$, we create different classifiers 
@@ -660,7 +660,7 @@ which will lead to a better choice of the number of neighbors $K$ for the
 overall set of training data. 
 
 Let's investigate this idea in R! In particular, we will generate five different train/validation
-splits of our overall training data, train five different $K$-nearest neighbors
+splits of our overall training data, train five different K-nearest neighbors
 models, and evaluate their accuracy. We will start with just a single
 split. 
 
@@ -834,7 +834,7 @@ accuracy estimate will be (lower standard error). However, we are limited
 by computational power: the
 more folds we choose, the  more computation it takes, and hence the more time
 it takes to run the analysis. So when you do cross-validation, you need to
-consider the size of the data, the speed of the algorithm (e.g., $K$-nearest
+consider the size of the data, the speed of the algorithm (e.g., K-nearest
 neighbors), and the speed of your computer. In practice, this is a 
 trial-and-error process, but typically $C$ is chosen to be either 5 or 10. Here 
 we will try 10-fold cross-validation to see if we get a lower standard error:
@@ -1085,7 +1085,7 @@ we set the number of neighbors $K$ to 1, 7, 20, and 300.
 ## Summary
 
 Classification algorithms use one or more quantitative variables to predict the
-value of another categorical variable. In particular, the $K$-nearest neighbors algorithm 
+value of another categorical variable. In particular, the K-nearest neighbors algorithm 
 does this by first finding the $K$ points in the training data nearest
 to the new observation, and then returning the majority class vote from those
 training observations. We can tune and evaluate a classifier by splitting the data randomly into a
@@ -1095,11 +1095,11 @@ by maximizing estimated accuracy via cross-validation. After we have tuned the
 model we can use the test set to estimate its accuracy.
 The overall process is summarized in Figure \@ref(fig:06-overview).
 
-```{r 06-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Overview of KNN classification.", fig.retina = 2, out.width = "100%"}
+```{r 06-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Overview of K-NN classification.", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/classification2/train-test-overview.jpeg")
 ```
 
-The overall workflow for performing $K$-nearest neighbors classification using `tidymodels` is as follows:
+The overall workflow for performing K-nearest neighbors classification using `tidymodels` is as follows:
 \index{tidymodels}\index{recipe}\index{cross-validation}\index{K-nearest neighbors!classification}\index{classification}
 
 1. Use the `initial_split` function to split the data into a training and test set. Set the `strata` argument to the class label variable. Put the test set aside for now.
@@ -1111,18 +1111,18 @@ The overall workflow for performing $K$-nearest neighbors classification using `
 7. Make a new model specification for the best parameter value (i.e., $K$), and retrain the classifier using the `fit` function.
 8. Evaluate the estimated accuracy of the classifier on the test set using the `predict` function.
 
-In these last two chapters, we focused on the $K$-nearest neighbor algorithm, 
+In these last two chapters, we focused on the K-nearest neighbors algorithm, 
 but there are many other methods we could have used to predict a categorical label. 
 All algorithms have their strengths and weaknesses, and we summarize these for 
 the $K$-NN here.
 
-**Strengths:** $K$-nearest neighbors classification
+**Strengths:** K-nearest neighbors classification
 
 1. is a simple, intuitive algorithm,
 2. requires few assumptions about what the data must look like, and
 3. works for binary (two-class) and multi-class (more than 2 classes) classification problems.
 
-**Weaknesses:** $K$-nearest neighbors classification
+**Weaknesses:** K-nearest neighbors classification
 
 1. becomes very slow as the training data gets larger,
 2. may not perform well with a large number of predictors, and
@@ -1137,14 +1137,14 @@ the $K$-NN here.
 Another potentially important part of tuning your classifier is to choose which
 variables from your data will be treated as predictor variables. Technically, you can choose
 anything from using a single predictor variable to using every variable in your
-data; the $K$-nearest neighbors algorithm accepts any number of
+data; the K-nearest neighbors algorithm accepts any number of
 predictors. However, it is **not** the case that using more predictors always
 yields better predictions! In fact, sometimes including irrelevant predictors \index{irrelevant predictors} can
 actually negatively affect classifier performance.
 
 ### The effect of irrelevant predictors
 
-Let's take a look at an example where $K$-nearest neighbors performs
+Let's take a look at an example where K-nearest neighbors performs
 worse when given more predictors to work with. In this example, we modified
 the breast cancer data to have only the `Smoothness`, `Concavity`, and
 `Perimeter` variables from the original data. Then, we added irrelevant
@@ -1248,7 +1248,7 @@ res <- tibble(ks = ks, accs = accs, fixedaccs = fixedaccs, nghbrs = nghbrs)
 #res <- res |> mutate(base_acc = base_acc)
 #plt_irrelevant_accuracies <- res |>
 #  ggplot() +
-#  geom_line(mapping = aes(x=ks, y=accs, linetype="Tuned KNN")) +
+#  geom_line(mapping = aes(x=ks, y=accs, linetype="Tuned K-NN")) +
 #  geom_hline(data=res, mapping=aes(yintercept=base_acc, linetype="Always Predict Benign")) +
 #  labs(x = "Number of Irrelevant Predictors", y = "Model Accuracy Estimate") + 
 #  scale_linetype_manual(name="Method", values = c("dashed", "solid"))
@@ -1267,7 +1267,7 @@ Figure \@ref(fig:06-performance-irrelevant-features) is that it shows that the m
 still outperforms the baseline majority classifier (with about `r round(cancer_propn_1[1,1], 0)`% accuracy) 
 even with 40 irrelevant variables.
 How could that be? Figure \@ref(fig:06-neighbors-irrelevant-features) provides the answer:
-the tuning procedure for the $K$-nearest neighbors classifier combats the extra randomness from the irrelevant variables 
+the tuning procedure for the K-nearest neighbors classifier combats the extra randomness from the irrelevant variables 
 by increasing the number of neighbors. Of course, because of all the extra noise in the data from the irrelevant
 variables, the number of neighbors does not increase smoothly; but the general trend is increasing.
 Figure \@ref(fig:06-fixed-irrelevant-features) corroborates
@@ -1470,7 +1470,7 @@ for (i in 1:n_total) {
                           step_scale(all_predictors()) |>
                           step_center(all_predictors())
 
-        # tune the KNN classifier with these predictors, 
+        # tune the K-NN classifier with these predictors, 
         # and collect the accuracy for the best K
         acc <- workflow() |>
           add_recipe(cancer_recipe) |>
