--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -47,7 +47,7 @@ This is unlike the past two chapters, which focused on predicting categorical
 variables via classification. However, regression does have many similarities
 to classification: for example, just as in the case of classification,
 we will split our data into training, validation, and test sets, we will 
-use `tidymodels` workflows, we will use a K-nearest neighbors (KNN) 
+use `tidymodels` workflows, we will use a K-nearest neighbors (K-NN) 
 approach to make predictions, and we will use cross-validation to choose K.
 Because of how similar these procedures are, make sure to read Chapters
 \@ref(classification1) and \@ref(classification2) before reading 
@@ -64,12 +64,12 @@ however that is beyond the scope of this book.
 By the end of the chapter, readers will be able to do the following:
 
 * Recognize situations where a simple regression analysis would be appropriate for making predictions.
-* Explain the K-nearest neighbor (KNN) regression algorithm and describe how it differs from KNN classification.
-* Interpret the output of a KNN regression.
-* In a data set with two or more variables, perform K-nearest neighbor regression in R using a `tidymodels` workflow.
+* Explain the K-nearest neighbors (K-NN) regression algorithm and describe how it differs from K-NN classification.
+* Interpret the output of a K-NN regression.
+* In a data set with two or more variables, perform K-nearest neighbors regression in R using a `tidymodels` workflow.
 * Execute cross-validation in R to choose the number of neighbors.
-* Evaluate KNN regression prediction accuracy in R using a test data set and the root mean squared prediction error (RMSPE).
-* In the context of KNN regression, compare and contrast goodness of fit and prediction properties (namely RMSE vs RMSPE).
+* Evaluate K-NN regression prediction accuracy in R using a test data set and the root mean squared prediction error (RMSPE).
+* In the context of K-NN regression, compare and contrast goodness of fit and prediction properties (namely RMSE vs RMSPE).
 * Describe the advantages and disadvantages of K-nearest neighbors regression.
 
 ## The regression problem
@@ -186,10 +186,10 @@ Much like in the case of classification,
 we can use a K-nearest neighbors-based \index{K-nearest neighbors!regression} 
 approach in regression to make predictions. 
 Let's take a small sample of the data in Figure \@ref(fig:07-edaRegr) 
-and walk through how K-nearest neighbors (KNN) works
+and walk through how K-nearest neighbors (K-NN) works
 in a regression context before we dive in to creating our model and assessing
 how well it predicts house sale price. This subsample is taken to allow us to
-illustrate the mechanics of KNN regression with a few data points; later in
+illustrate the mechanics of K-NN regression with a few data points; later in
 this chapter we will use all the data.
 
 To take a small random sample of size 30, we'll use the function
@@ -279,12 +279,12 @@ Our predicted price is \$`r format(round(prediction[[1]]), big.mark=",", nsmall=
 (shown as a red point in Figure \@ref(fig:07-predictedViz-knn)), which is much less than \$350,000; perhaps we
 might want to offer less than the list price at which the house is advertised.
 But this is only the very beginning of the story. We still have all the same
-unanswered questions here with KNN regression that we had with KNN
+unanswered questions here with K-NN regression that we had with K-NN
 classification: which $K$ do we choose, and is our model any good at making
 predictions? In the next few sections, we will address these questions in the
-context of KNN regression.
+context of K-NN regression.
 
-One strength of the KNN regression algorithm 
+One strength of the K-NN regression algorithm 
 that we would like to draw attention to at this point
 is its ability to work well with non-linear relationships
 (i.e., if the relationship is not a straight line).
@@ -311,11 +311,11 @@ sacramento_train <- training(sacramento_split)
 sacramento_test <- testing(sacramento_split)
 ```
 
-Next, we'll use cross-validation \index{cross-validation} to choose $K$. In KNN classification, we used
+Next, we'll use cross-validation \index{cross-validation} to choose $K$. In K-NN classification, we used
 accuracy to see how well our predictions matched the true labels. We cannot use
 the same metric in the regression setting, since our predictions will almost never
 *exactly* match the true response variable values. Therefore in the
-context of KNN regression we will use root mean square prediction error \index{root mean square prediction error|see{RMSPE}}\index{RMSPE}
+context of K-NN regression we will use root mean square prediction error \index{root mean square prediction error|see{RMSPE}}\index{RMSPE}
 (RMSPE) instead. The mathematical formula for calculating RMSPE is: 
 
 $$\text{RMSPE} = \sqrt{\frac{1}{n}\sum\limits_{i=1}^{n}(y_i - \hat{y}_i)^2}$$
@@ -397,7 +397,7 @@ errors_plot
 
 > **Note:** When using many code packages (`tidymodels` included), the evaluation output 
 > we will get to assess the prediction quality of
-> our KNN regression models is labeled "RMSE", or "root mean squared
+> our K-NN regression models is labeled "RMSE", or "root mean squared
 > error". Why is this so, and why not RMSPE? \index{RMSPE!comparison with RMSE}
 > In statistics, we try to be very precise with our
 > language to indicate whether we are calculating the prediction error on the
@@ -507,12 +507,12 @@ Figure \@ref(fig:07-choose-k-knn-plot). What is happening here?
 
 Figure \@ref(fig:07-howK) visualizes the effect of different settings of $K$ on the
 regression model. Each plot shows the predicted values for house sale price from
-our KNN regression model on the training data for 6 different values for $K$: 1, 3, `r kmin`, 41, 250, and 680 (almost the entire training set).
+our K-NN regression model on the training data for 6 different values for $K$: 1, 3, `r kmin`, 41, 250, and 680 (almost the entire training set).
 For each model, we predict prices for the range of possible home sizes we
 observed in the data set (here 500 to 5,000 square feet) and we plot the
 predicted prices as a blue line.
 
-```{r 07-howK, echo = FALSE, warning = FALSE, fig.height = 13, fig.width = 10,fig.cap = "Predicted values for house price (represented as a blue line) from KNN regression models for six different values for $K$."}
+```{r 07-howK, echo = FALSE, warning = FALSE, fig.height = 13, fig.width = 10,fig.cap = "Predicted values for house price (represented as a blue line) from K-NN regression models for six different values for $K$."}
 gridvals <- c(1, 3, kmin, 41, 250, 680)
 
 plots <- list()
@@ -593,7 +593,7 @@ chapter.
 
 To assess how well our model might do at predicting on unseen data, we will
 assess its RMSPE on the test data. To do this, we will first
-re-train our KNN regression model on the entire training data set, 
+re-train our K-NN regression model on the entire training data set, 
 using $K =$ `r sacr_min |> pull(neighbors)` neighbors. Then we will
 use `predict` to make predictions on the test data, and use the `metrics`
 function again to compute the summary of regression quality. Because
@@ -631,7 +631,7 @@ RMSPE estimate of our tuned model
 (which was $`r format(round(sacr_min |> pull(mean)), big.mark=",", nsmall=0, scientific=FALSE)`), 
 so we can say that the model appears to generalize well
 to new data that it has never seen before.
-However, much like in the case of KNN classification, whether this value for RMSPE is *good*&mdash;i.e.,
+However, much like in the case of K-NN classification, whether this value for RMSPE is *good*&mdash;i.e.,
 whether an error of around $`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`
 is acceptable&mdash;depends entirely on the application. 
 In this application, this error
@@ -653,7 +653,7 @@ You have already seen a
 few plots like this in this chapter, but here we also provide the code that
 generated it as a learning opportunity.
 
-```{r 07-predict-all, warning = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Predicted values of house price (blue line) for the final KNN regression model."}
+```{r 07-predict-all, warning = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Predicted values of house price (blue line) for the final K-NN regression model."}
 sqft_prediction_grid <- tibble(
     sqft = seq(
         from = sacramento |> select(sqft) |> min(),
@@ -680,9 +680,9 @@ plot_final <- ggplot(sacramento, aes(x = sqft, y = price)) +
 plot_final
 ```
 
-## Multivariable KNN regression
+## Multivariable K-NN regression
 
-As in KNN classification, we can use multiple predictors in KNN regression.
+As in K-NN classification, we can use multiple predictors in K-NN regression.
 In this setting, we have the same concerns regarding the scale of the predictors. Once again, 
  predictions are made by identifying the $K$
 observations that are nearest to the new point we want to predict; any
@@ -691,13 +691,13 @@ variables on a small scale. But since the `recipe` we built above scales and cen
 all predictor variables, this is handled for us.
 
 Note that we also have the same concern regarding the selection of predictors
-in KNN regression as in KNN classification: having more predictors is **not** always
+in K-NN regression as in K-NN classification: having more predictors is **not** always
 better, and the choice of which predictors to use has a potentially large influence
 on the quality of predictions. Fortunately, we can use the predictor selection 
-algorithm from the classification chapter in KNN regression as well.
+algorithm from the classification chapter in K-NN regression as well.
 As the algorithm is the same, we will not cover it again in this chapter.
 
-We will now demonstrate a multivariable KNN regression \index{K-nearest neighbors!multivariable regression}  analysis of the 
+We will now demonstrate a multivariable K-NN regression \index{K-nearest neighbors!multivariable regression}  analysis of the 
 Sacramento real estate \index{Sacramento real estate} data using `tidymodels`. This time we will use
 house size (measured in square feet) as well as number of bedrooms as our
 predictors, and continue to use house sale price as our response variable
@@ -720,7 +720,7 @@ Figure \@ref(fig:07-bedscatter) shows that as the number of bedrooms increases,
 the house sale price tends to increase as well, but that the relationship
 is quite weak. Does adding the number of bedrooms
 to our model improve our ability to predict price? To answer that
-question, we will have to create a new KNN regression
+question, we will have to create a new K-NN regression
 model using house size and number of bedrooms, and then we can compare it to
 the model we previously came up with that only used house
 size. Let's do that now!
@@ -758,7 +758,7 @@ sacr_multi
 ```
 
 Here we see that the smallest estimated RMSPE from cross-validation occurs when $K =$ `r sacr_k`.
-If we want to compare this multivariable KNN regression model to the model with only a single
+If we want to compare this multivariable K-NN regression model to the model with only a single
 predictor *as part of the model tuning process* (e.g., if we are running forward selection as described
 in the chapter on evaluating and tuning classification models),
 then we must compare the RMSPE estimated using only the training data via cross-validation.
@@ -769,7 +769,7 @@ The estimated cross-validation RMSPE for the multivariable model is
 Thus in this case, we did not improve the model 
 by a large amount by adding this additional predictor.
 
-Regardless, let's continue the analysis to see how we can make predictions with a multivariable KNN regression model
+Regardless, let's continue the analysis to see how we can make predictions with a multivariable K-NN regression model
 and evaluate its performance on test data. We first need to re-train the model on the entire
 training data set with $K =$ `r sacr_k`, and then use that model to make predictions
 on the test data.
@@ -795,14 +795,14 @@ knn_mult_mets <- metrics(knn_mult_preds, truth = price, estimate = .pred) |>
 knn_mult_mets
 ```
 
-This time, when we performed KNN regression on the same data set, but also
+This time, when we performed K-NN regression on the same data set, but also
 included number of bedrooms as a predictor, we obtained a RMSPE test error 
 of \$`r format(round(knn_mult_mets |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`.
 Figure \@ref(fig:07-knn-mult-viz) visualizes the model's predictions overlaid on top of the data. This 
 time the predictions are a surface in 3D space, instead of a line in 2D space, as we have 2
 predictors instead of 1. 
 
-```{r 07-knn-mult-viz, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "KNN regression model’s predictions represented as a surface in 3D space overlaid on top of the data using three predictors (price, house size, and the number of bedrooms). Note that in general we recommend against using 3D visualizations; here we use a 3D visualization only to illustrate what the surface of predictions looks like for learning purposes.", out.width="100%"}
+```{r 07-knn-mult-viz, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "K-NN regression model’s predictions represented as a surface in 3D space overlaid on top of the data using three predictors (price, house size, and the number of bedrooms). Note that in general we recommend against using 3D visualizations; here we use a 3D visualization only to illustrate what the surface of predictions looks like for learning purposes.", out.width="100%"}
 xvals <- seq(from = min(sacramento_train$sqft), 
              to = max(sacramento_train$sqft), 
              length = 50)
@@ -857,9 +857,9 @@ house with a size of 2,500 square feet generally increases slightly as the numbe
 of bedrooms increases. Without having the additional predictor of number of
 bedrooms, we would predict the same price for these two houses.
 
-## Strengths and limitations of KNN regression
+## Strengths and limitations of K-NN regression
 
-As with KNN classification (or any prediction algorithm for that matter), KNN 
+As with K-NN classification (or any prediction algorithm for that matter), K-NN 
 regression has both strengths and weaknesses. Some are listed here:
 
 **Strengths:** K-nearest neighbors regression
